# RacheAAN

./: .gitignore  .gitmodules  CKKSTest.cpp  CMakeLists.txt  LICENSE  README.md  install.sh  vcpkg.json
src/: BFVTest.cpp  BGVTest.cpp  CKKSTest.cpp  CMakeLists.txt  CipherStream.cpp  DataSetRunner.cpp  bench.cpp  bench.h  bitcoin  covid19  hg38  ihe.h  inche.cpp  inche.h  racheaan.cpp  racheaan.h  racheal.cpp  racheal.h  utils.h  vcpkg.json
src/test/: CMakeLists.txt  rache_test.cpp  testrunner.cpp
